<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WlanLogin</string>
    <string name="not_implemented">This feature has not been implemented yet.</string>
    
    
    <string name="pref_category_exe">Execute</string>
    <string name="prefs_exec_autoauth_name">Automatic authentication</string>
    <string name="prefs_exec_autoauth_description">Enable automatic authentication</string>
    <string name="prefs_exec_autolunch_name">Automatic start-up</string>
    <string name="prefs_exec_autolunch_description">Boot this application after device\'s boot</string>
    <string name="prefs_exec_debug_name">Debug mode</string>
    <string name="prefs_exec_debug_description">Enable debug mode</string>
    
    <string name="prefs_auth">Setting</string>
    <string name="prefs_auth_autoconfig_name">Automatic setting</string>
    <string name="prefs_auth_autoconfig_description">Automatic setting of network environment</string>
    <string name="prefs_auth_manage_name">Manage authentic information</string>
    <string name="prefs_auth_manage_advance_name">Advanced setting</string>
    
    <string name="auth_manage_title">Manage authentic information</string>
    <string name="auth_edit_title">Edit authentic information</string>
    
    <string name="prefs_info">Information</string>
    <string name="prefs_copyright_info">Copyright information</string>
        
    <string name="advance_pref_title">Advances setting</string>
    <string name="advance_pref_description">Advances setting</string>
    <string name="prefs_self_signed_certificate_title">Manage setting of self-signed certificate</string>
    <string name="prefs_use_self_signed_certificate_name">Use prepared self-signed certificate(s)</string>
    <string name="prefs_use_self_signed_certificate_description">Check if authentication page use self-signed certificate</string>
    <string name="prefs_self_signed_certificate_path">Path of a self-signed certificate</string>
    <string name="prefs_use_self_signed_certificate_folder_name">Load the entire folder</string>
    <string name="prefs_use_self_signed_certificate_folder_description">Load all files in the folder in the designated file</string>
    
    
    <string name="copyright_info_title">Copyright information</string>
    <string name="copyright_info">■Copyright information■\n
This application is licensed under GNU General Public License version3 (GPLv3).\n
Copyright 2011-  shirayu (Yuta Hayashibe)\n
\n
\n
■Acknowledgment■\n
This application uses  all or part of the following product.\n
<a href="http://www.openclipart.org/detail/76723/wifi-web-2.0-sticker-by-shokunin">shokunin</a> : Icon\n
<a href="http://my.opera.com/crckyl/blog/2011/02/27/android-self-signed-ssl">crckyl</a> : MyHttpClient.java\n
<a href="http://be55.com/">yokamaru</a> : WifiConnectReceiver.java, WlanAuthService.java, StartReceiver.java, StartReceiver.java\n
\n
\n
This application is motivated by 
<a href="http://be55.com/software/android/ferecauth">FerecAuth</a>
developed by <a href="http://be55.com/">yokamaru</a>\n
\n
\n
■Disclaimer■\n
We do not take any responsibility for the content of this application.
    </string>
    
    <string name="login_start">Starting login</string>
	<string name="login_finished">Login finished (if the setting is not wrong)</string>
	<string name="login_error">Login failed for an error</string>
	
	<string name="prefs_ssid">SSID</string>
	<string name="prefs_hint_ssid"></string>
	<string name="prefs_id">User id</string>
	<string name="prefs_hint_id">Your login ID</string>
	<string name="prefs_id_fld">Parameter for used id</string>
	<string name="prefs_hint_id_fld"></string>
	<string name="prefs_pass">Password</string>
	<string name="prefs_hint_pass">Your login password</string>
	<string name="prefs_pass_fld">Parameter for login password</string>
	<string name="prefs_hint_pass_fld"></string>
	<string name="prefs_url">URL</string>
	<string name="prefs_hint_url"></string>
	<string name="prefs_hidden">Other parameters</string>
	<string name="prefs_active">Enable this setting</string>
	<string name="hint_setting">Support website is <a href="http://www.shirayu.net/works/WlanLogin">here</a>.</string>
	
	
	<string name="add_new">New...</string>
	
	<string name="prefs_save">Save</string>
	<string name="prefs_cancel">Cancel</string>
	<string name="prefs_delete">Delete</string>
	<string name="prefs_delete_confirm">Really delete this setting?</string>
	
	<string name="confirm_yes">Yes</string>
	<string name="confirm_no">No</string>
	<string name="confirm_input_ssid">Enter SSID</string>
	<string name="confirm_duplicate_ssid">Entered SSID has already existed</string>
</resources>
